--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.SplashScreenActivity">
+    tools:context=".UI.SplashScreenActivity"
+    tools:ignore="MissingDefaultResource">
 
     <TextView
         android:id="@+id/titleSplash"
