--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,5 +4,45 @@
     android:layout_height="match_parent"
     tools:context=".UI.MainActivity">
 
+    <ListView
+        android:id="@+id/listAnnonce"
+        android:layout_width="320dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp" />
+
+    <EditText
+        android:id="@+id/villecpMenu"
+        android:layout_width="93dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/rechercheMenu"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="11dp"
+        android:ems="10"
+        android:hint="Ville/CP"
+        android:inputType="textPersonName"
+        android:textSize="12sp" />
+
+    <EditText
+        android:id="@+id/rechercheMenu"
+        android:layout_width="93dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="Recherche"
+        android:inputType="textPersonName"
+        android:textSize="12sp" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="113dp"
+        android:layout_height="37dp"
+        android:layout_alignBottom="@+id/villecpMenu"
+        android:layout_centerHorizontal="true"
+        android:spinnerMode="dropdown" />
 </RelativeLayout>
 
