--- a/app/src/main/res/layout/list_annonce_template.xml
+++ b/app/src/main/res/layout/list_annonce_template.xml
@@ -10,6 +10,9 @@
         android:id="@+id/imageArticle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/categorieMenu"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="31dp" />
@@ -18,6 +21,10 @@
         android:id="@+id/titreMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="42dp"
         android:text="TextView"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="108dp"
@@ -27,6 +34,8 @@
         android:id="@+id/categorieMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/titreMenu"
+        android:layout_alignStart="@+id/titreMenu"
         android:text="TextView"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="59dp" />
@@ -35,6 +44,9 @@
         android:id="@+id/prixMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/titreMenu"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="109dp"
         android:text="TextView"
         tools:layout_editor_absoluteX="236dp"
         tools:layout_editor_absoluteY="59dp" />
@@ -43,6 +55,8 @@
         android:id="@+id/dateMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/prixMenu"
+        android:layout_alignStart="@+id/prixMenu"
         android:text="TextView"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="78dp" />
