--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -11,8 +11,20 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:visibility="visible"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true">
+
+    </ListView>
+
+    <TextView
+        android:id="@+id/TitleView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="13dp"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/NameView"
@@ -20,24 +32,50 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="50dp"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:visibility="visible"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="17dp" />
+        android:visibility="visible" />
 
     <TextView
-        android:id="@+id/SpecieView"
+        android:id="@+id/EmailView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/NameView"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/NameView"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="14dp"
         android:textSize="12sp"
         android:visibility="visible"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp" />
+        tools:ignore="RelativeOverlap" />
+
+    <TextView
+        android:id="@+id/LcoView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/NameView"
+        android:layout_marginTop="84dp"
+        android:textSize="12sp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/CatView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/LcoView"
+        android:layout_marginTop="117dp"
+        android:textSize="12sp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/PriceView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/EmailView"
+        android:layout_alignTop="@+id/CatView"
+        android:textSize="12sp"
+        android:visibility="visible" />
 
 </RelativeLayout>
