--- a/app/src/main/res/layout/list_annonce_template.xml
+++ b/app/src/main/res/layout/list_annonce_template.xml
@@ -8,25 +8,25 @@
 
     <ImageView
         android:id="@+id/imageArticle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/categorieMenu"
+        android:layout_width="49dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="13dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="31dp" />
 
     <TextView
         android:id="@+id/titreMenu"
-        android:layout_width="wrap_content"
+        android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="5dp"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textSize="14sp"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="34dp" />
 
@@ -34,8 +34,8 @@
         android:id="@+id/categorieMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titreMenu"
         android:layout_alignStart="@+id/titreMenu"
+        android:layout_alignBottom="@+id/imageArticle"
         android:text="TextView"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="59dp" />
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/titreMenu"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="109dp"
+        android:layout_marginEnd="22dp"
         android:text="TextView"
         tools:layout_editor_absoluteX="236dp"
         tools:layout_editor_absoluteY="59dp" />
@@ -55,8 +55,8 @@
         android:id="@+id/dateMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/prixMenu"
         android:layout_alignStart="@+id/prixMenu"
+        android:layout_alignBottom="@+id/imageArticle"
         android:text="TextView"
         tools:layout_editor_absoluteX="108dp"
         tools:layout_editor_absoluteY="78dp" />
