--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,39 +10,54 @@
         android:id="@+id/identification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="56dp"
         android:text="S'indentifier"
-        tools:layout_editor_absoluteX="128dp"
+        tools:layout_editor_absoluteX="118dp"
         tools:layout_editor_absoluteY="38dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/depAnnonce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="131dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="167dp"
+        android:text="Déposer une annonce"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="130dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/modifAnnonce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="220dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="215dp"
+        android:text="Modifier une annonce"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="219dp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/favoris"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="314dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="141dp"
+        android:text="Favoris"
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="315dp" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/acceuil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="128dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="64dp"
+        android:text="Acceuil"
+        tools:layout_editor_absoluteX="136dp"
         tools:layout_editor_absoluteY="403dp" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
