--- a/app/src/main/res/layout/activity_detail_annonce.xml
+++ b/app/src/main/res/layout/activity_detail_annonce.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dateDetail"
@@ -11,7 +11,11 @@
         android:id="@+id/titleDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
         android:text="textView"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="128dp"
         tools:layout_editor_absoluteY="16dp" />
@@ -20,23 +24,23 @@
         android:id="@+id/prixDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/categorieDetail"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="115dp"
         android:text="TextView"
+        android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="227dp"
         tools:layout_editor_absoluteY="77dp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="227dp"
-        tools:layout_editor_absoluteY="112dp" />
 
     <TextView
         android:id="@+id/categorieDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/vendeurDetail"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="159dp"
         android:text="TextView"
+        android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="227dp"
         tools:layout_editor_absoluteY="145dp" />
 
@@ -44,7 +48,13 @@
         android:id="@+id/descriptionDetail"
         android:layout_width="182dp"
         android:layout_height="205dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginBottom="21dp"
         android:text="TextView"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="246dp" />
 
@@ -52,7 +62,11 @@
         android:id="@+id/vendeurDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="51dp"
         android:text="TextView"
+        android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="243dp"
         tools:layout_editor_absoluteY="246dp" />
 
@@ -60,8 +74,21 @@
         android:id="@+id/contacterDetail"
         android:layout_width="78dp"
         android:layout_height="35dp"
+        android:layout_below="@+id/vendeurDetail"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="39dp"
         android:text="Contacter"
         android:textSize="8sp"
         tools:layout_editor_absoluteX="227dp"
         tools:layout_editor_absoluteY="284dp" />
-</android.support.constraint.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageDetail"
+        android:layout_width="141dp"
+        android:layout_height="117dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="141dp"
+        app:srcCompat="@mipmap/ic_launcher" />
+</RelativeLayout>
