--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,13 @@
         android:layout_alignBottom="@+id/villecpMenu"
         android:layout_centerHorizontal="true"
         android:spinnerMode="dropdown" />
+
+    <Button
+        android:id="@+id/boutonRechercher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/villecpMenu"
+        android:layout_centerHorizontal="true"
+        android:text="Rechercher" />
 </RelativeLayout>
 
