Fix Gif and Dash

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,12 +8,23 @@
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="424dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:contentDescription="@string/loading"
         android:visibility="visible"
         app:srcCompat="@drawable/noun"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
+
+    <ImageView
+        android:id="@+id/gifId"
+        android:layout_width="207dp"
+        android:layout_height="148dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        app:srcCompat="@android:color/transparent" />
 
 </RelativeLayout>
