--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,71 +12,43 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true">
-
-    </ListView>
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="true"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/TitleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/NameView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="111dp"
+        android:layout_marginTop="12dp"
+        android:textAllCaps="true"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/EmailView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/NameView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="14dp"
-        android:textSize="12sp"
-        android:visibility="visible"
-        tools:ignore="RelativeOverlap" />
-
-    <TextView
-        android:id="@+id/LcoView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/NameView"
-        android:layout_marginTop="84dp"
-        android:textSize="12sp"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/CatView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/LcoView"
-        android:layout_marginTop="117dp"
-        android:textSize="12sp"
-        android:visibility="visible" />
+        android:layout_alignStart="@+id/TitleView"
+        android:layout_below="@+id/TitleView"
+        android:textSize="10sp"
+        android:typeface="serif"
+        android:visibility="visible"
+        app:fontFamily="sans-serif" />
 
     <TextView
         android:id="@+id/PriceView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/EmailView"
+        android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/CatView"
-        android:textSize="12sp"
+        android:layout_marginEnd="103dp"
+        android:textSize="10sp"
         android:visibility="visible" />
+
 
 </RelativeLayout>
