--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -11,21 +11,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="Envoyer"
+        android:text="@string/envoyer"
         android:layout_alignParentRight="true" />
 
     <EditText
         android:id="@+id/IDuser"
-        style="@android:style/Widget.Material.AutoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="72dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:selectAllOnFocus="false"
-        android:singleLine="false" />
+        android:layout_alignParentLeft="true"
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/IDpass"
@@ -37,15 +36,18 @@
         android:ems="10"
         android:inputType="textPassword"
         android:selectAllOnFocus="false"
-        android:singleLine="false" />
+        android:singleLine="false"
+        android:layout_alignParentLeft="true"
+        tools:ignore="LabelFor" />
 
     <CheckBox
         android:id="@+id/IDcheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:text="Se souvenir de moi" />
+        android:text="@string/se_souvenir_de_moi" />
 
     <TextView
         android:id="@+id/Viewpass"
@@ -54,7 +56,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="138dp"
-        android:text="Mot de passe" />
+        android:text="@string/mot_de_passe"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/Viewuser"
@@ -63,7 +66,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="43dp"
-        android:text="Nom de l'utilisateur" />
+        android:text="@string/utilisateur"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/Btn_reset"
@@ -71,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:text="Vider" />
+        android:text="@string/vider"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
