--- a/app/src/main/res/menu/menu_activity_dashboard.xml
+++ b/app/src/main/res/menu/menu_activity_dashboard.xml
@@ -3,31 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ynov.informatiqueb2.lesbonnesaffairesdebibi.app.ActivityDashboard">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="101"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_settings_two"
-        android:orderInCategory="101"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_settings_connect"
+        android:orderInCategory="102"
+        android:title="@string/action_connect" />
 
     <item
-        android:id="@+id/action_settings_three"
-        android:orderInCategory="101"
-        android:title="@string/action_settings"
+        android:id="@+id/action_settings_list"
+        android:orderInCategory="103"
+        android:title="@string/action_list"
         app:showAsAction="never" />
-
     <item
-        android:id="@+id/action_settings_four"
-        android:orderInCategory="101"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_settings_five"
-        android:orderInCategory="101"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/app_bar_search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:orderInCategory="104"
+        android:title="Search" />
 </menu>
