--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -15,21 +15,22 @@
         android:layout_alignParentRight="true" />
 
     <EditText
-        android:id="@+id/IDuser"
+        android:id="@+id/idUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="72dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_alignParentLeft="true"
         tools:ignore="LabelFor" />
 
     <EditText
-        android:id="@+id/IDpass"
+        android:id="@+id/idPass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="167dp"
@@ -37,7 +38,6 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="false"
         android:singleLine="false"
-        android:layout_alignParentLeft="true"
         tools:ignore="LabelFor" />
 
     <CheckBox
