--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,8 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="111dp"
-        android:layout_marginTop="12dp"
         android:text="Titre"
         android:textAllCaps="true"
         android:textSize="14sp"
@@ -25,8 +23,10 @@
         android:id="@+id/CatDetailView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/TitleDetailView"
-        android:layout_below="@+id/TitleDetailView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="46dp"
+        android:layout_marginTop="47dp"
         android:text="Categorie"
         android:textSize="10sp"
         android:typeface="serif"
@@ -37,11 +37,53 @@
         android:id="@+id/PriceDetailView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/CatDetailView"
-        android:layout_marginEnd="103dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/CatDetailView"
+        android:layout_marginTop="74dp"
         android:text="Prix"
         android:textSize="10sp"
         android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/DescriptionDetailView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="202dp"
+        android:text="Description"
+        android:textSize="10sp"
+        android:textStyle="italic"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/NomVendeurDetailView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="76dp"
+        android:text="NomVendeur"
+        android:textSize="10sp"
+        android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="187dp"
+        android:layout_height="147dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="29dp"
+        app:srcCompat="@android:color/transparent" />
+
+    <Button
+        android:id="@+id/IDContact"
+        android:layout_width="208dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="13dp"
+        android:text="Contacter le vendeur" />
 
 </RelativeLayout>
