Post annonce (quand l'API marchera) + formulaire avec les verif (pas tres beau)

--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="55dp"
         android:text="S'indentifier"
         tools:layout_editor_absoluteX="118dp"
         tools:layout_editor_absoluteY="38dp" />
@@ -21,9 +21,9 @@
         android:id="@+id/depAnnonce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/modifAnnonce"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="167dp"
+        android:layout_marginTop="129dp"
         android:text="Déposer une annonce"
         tools:layout_editor_absoluteX="90dp"
         tools:layout_editor_absoluteY="130dp" />
@@ -32,9 +32,9 @@
         android:id="@+id/modifAnnonce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="215dp"
+        android:layout_marginTop="197dp"
         android:text="Modifier une annonce"
         tools:layout_editor_absoluteX="90dp"
         tools:layout_editor_absoluteY="219dp" />
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="141dp"
+        android:layout_marginBottom="201dp"
         android:text="Favoris"
         tools:layout_editor_absoluteX="136dp"
         tools:layout_editor_absoluteY="315dp" />
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="127dp"
         android:text="Acceuil"
         tools:layout_editor_absoluteX="136dp"
         tools:layout_editor_absoluteY="403dp" />
