--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactActivity">
+    tools:context=".app.ActivityContact">
 
     <EditText
         android:id="@+id/namecontact"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="153dp"
         android:ems="10"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="68dp"
@@ -20,11 +20,11 @@
 
     <EditText
         android:id="@+id/mailcontact"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="167dp"
+        android:layout_marginTop="236dp"
         android:ems="10"
         android:inputType="textEmailAddress"
         tools:layout_editor_absoluteX="68dp"
@@ -32,9 +32,11 @@
 
     <EditText
         android:id="@+id/telcontact"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="174dp"
         android:ems="10"
         android:inputType="phone"
         tools:layout_editor_absoluteX="68dp"
@@ -42,34 +44,34 @@
 
     <EditText
         android:id="@+id/messagecontact"
-        android:layout_width="wrap_content"
-        android:layout_height="101dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="83dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="102dp"
         android:ems="10"
         android:inputType="textMultiLine" />
 
     <Button
         android:id="@+id/submitcontact"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:text="Envoyer" />
 
     <Button
         android:id="@+id/resetcontact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/namecontact"
         android:layout_alignTop="@+id/submitcontact"
+        android:layout_centerHorizontal="true"
         android:text="Reinitialiser" />
 
     <Button
         android:id="@+id/retourcontact"
-        android:layout_width="wrap_content"
+        android:layout_width="116dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/submitcontact"
@@ -80,8 +82,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/namecontact"
-        android:layout_alignStart="@+id/namecontact"
-        android:layout_marginBottom="-106dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="-153dp"
         android:text="Nom*" />
 
     <TextView
@@ -89,16 +91,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/mailcontact"
-        android:layout_alignStart="@+id/namecontact"
-        android:layout_marginBottom="-167dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="-236dp"
         android:text="Email*" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/namecontact"
-        android:layout_below="@+id/mailcontact"
+        android:layout_above="@+id/telcontact"
+        android:layout_alignParentStart="true"
         android:text="Numéro de téléphone" />
 
     <TextView
@@ -106,69 +108,68 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/messagecontact"
-        android:layout_alignStart="@+id/namecontact"
+        android:layout_alignParentStart="true"
         android:text="Message*" />
 
     <ImageView
         android:id="@+id/imagecontact"
-        android:layout_width="70dp"
-        android:layout_height="68dp"
-        android:layout_above="@+id/textView2"
-        android:layout_toStartOf="@+id/namecontact"
+        android:layout_width="113dp"
+        android:layout_height="98dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/titrecontact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/imagecontact"
-        android:layout_marginStart="102dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="13dp"
+        android:layout_toEndOf="@+id/textView4"
         android:text="TITRE" />
 
     <TextView
         android:id="@+id/prixcontact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="121dp"
-        android:layout_marginTop="45dp"
+        android:layout_alignBottom="@+id/imagecontact"
+        android:layout_toEndOf="@+id/textView4"
         android:text="PRIX" />
 
     <ImageView
         android:id="@+id/imagevendeurcontact"
-        android:layout_width="42dp"
-        android:layout_height="66dp"
+        android:layout_width="73dp"
+        android:layout_height="77dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="19dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="0dp"
         app:srcCompat="@drawable/noun" />
 
     <TextView
         android:id="@+id/vendeurcontact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/imagevendeurcontact"
-        android:layout_marginEnd="12dp"
+        android:layout_alignEnd="@+id/imagevendeurcontact"
+        android:layout_below="@+id/imagecontact"
         android:text="NOM VENDEUR" />
 
     <TextView
         android:id="@+id/datecontact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
-        android:layout_toEndOf="@+id/resetcontact"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="105dp"
         android:text="Date" />
 
     <TextView
         android:id="@+id/categoriecontact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView5"
-        android:layout_below="@+id/prixcontact"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="44dp"
+        android:layout_toEndOf="@+id/textView4"
         android:text="Catégorie" />
 
 </RelativeLayout>
