--- a/app/src/main/res/layout/activity_deposer_annonce.xml
+++ b/app/src/main/res/layout/activity_deposer_annonce.xml
@@ -10,21 +10,33 @@
         android:id="@+id/nomDepAn"
         android:layout_width="171dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/pwdDepAn"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="66dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="Nom*"
         android:inputType="textPersonName"
         android:textSize="14sp" />
 
     <EditText
-        android:id="@+id/pwdDepAn"
-        android:layout_width="170dp"
+        android:id="@+id/emailDepAn"
+        android:layout_width="172dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/pwd2DepAn"
+        android:layout_alignStart="@+id/nomDepAn"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="165dp"
+        android:layout_marginTop="78dp"
+        android:ems="10"
+        android:hint="Email*"
+        android:inputType="textEmailAddress"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/pwdDepAn"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/nomDepAn"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="126dp"
         android:ems="10"
         android:hint="Password*"
         android:inputType="textPassword"
@@ -34,36 +46,44 @@
         android:id="@+id/pwd2DepAn"
         android:layout_width="171dp"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/nomDepAn"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="174dp"
         android:ems="10"
         android:hint="Confirmer Password*"
         android:inputType="textPassword"
+        android:textSize="14sp" />
+
+    <Spinner
+        android:id="@+id/spinnerDepAn"
+        android:layout_width="149dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/nomDepAn"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="220dp" />
+
+    <EditText
+        android:id="@+id/titreDepAn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/nomDepAn"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="275dp"
+        android:ems="10"
+        android:hint="titre*"
+        android:inputType="textPersonName"
         android:textSize="14sp" />
 
     <EditText
         android:id="@+id/prixDepAn"
         android:layout_width="144dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="130dp"
+        android:layout_alignStart="@+id/nomDepAn"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="320dp"
         android:ems="10"
         android:hint="Prix*"
         android:inputType="number"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/emailDepAn"
-        android:layout_width="172dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="116dp"
-        android:ems="10"
-        android:hint="Email*"
-        android:inputType="textEmailAddress"
         android:textSize="14sp" />
 
     <EditText
@@ -71,50 +91,31 @@
         android:layout_width="175dp"
         android:layout_height="87dp"
         android:layout_alignStart="@+id/nomDepAn"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="365dp"
         android:ems="10"
         android:hint="Description*"
         android:inputType="textPersonName"
         android:textSize="14sp" />
 
-    <Spinner
-        android:id="@+id/spinnerDepAn"
-        android:layout_width="149dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/titreDepAn"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="228dp" />
-
     <Button
         android:id="@+id/validerDepAn"
-        android:layout_width="64dp"
-        android:layout_height="29dp"
+        android:layout_width="66dp"
+        android:layout_height="38dp"
         android:layout_alignTop="@+id/annulerDepAn"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="43dp"
         android:text="Valider"
         android:textSize="9sp" />
 
     <Button
         android:id="@+id/annulerDepAn"
-        android:layout_width="64dp"
-        android:layout_height="29dp"
+        android:layout_width="72dp"
+        android:layout_height="38dp"
+        android:layout_below="@+id/descDepAn"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="26dp"
         android:text="Annuler"
         android:textSize="9sp" />
 
-    <EditText
-        android:id="@+id/titreDepAn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="179dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="titre*"
-        android:textSize="14sp" />
 </RelativeLayout>
