ajout com + petites modif de nav + ajout des dates

--- a/app/src/main/res/layout/activity_confirmation_message.xml
+++ b/app/src/main/res/layout/activity_confirmation_message.xml
@@ -10,22 +10,21 @@
         android:id="@+id/imageContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="57dp"
-        android:layout_marginEnd="-82dp"
-        android:layout_toStartOf="@+id/titreConfirm"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="62dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="42dp"
         tools:layout_editor_absoluteY="42dp" />
 
     <TextView
         android:id="@+id/titreConfirm"
-        android:layout_width="182dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="98dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="272dp"
+        android:layout_height="33dp"
+        android:layout_above="@+id/vendeurConfirm"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="40dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="132dp"
@@ -35,9 +34,9 @@
         android:id="@+id/vendeurConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/titreConfirm"
-        android:layout_marginStart="-86dp"
-        android:layout_toEndOf="@+id/prixConfirm"
+        android:layout_above="@+id/prixConfirm"
+        android:layout_alignEnd="@+id/retourAnnonceConfirm"
+        android:layout_marginBottom="-69dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="288dp"
@@ -59,9 +58,9 @@
         android:id="@+id/catConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/messageDeConfirm"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="97dp"
+        android:layout_alignTop="@+id/prixConfirm"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="117dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="132dp"
@@ -71,9 +70,9 @@
         android:id="@+id/dateConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/prixConfirm"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="115dp"
+        android:layout_alignEnd="@+id/messageDeConfirm"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="103dp"
         android:text="TextView"
         android:textColor="@android:color/black"
         tools:layout_editor_absoluteX="208dp"
