--- a/app/src/main/res/layout/activity_contacter_vendeur.xml
+++ b/app/src/main/res/layout/activity_contacter_vendeur.xml
@@ -19,8 +19,8 @@
 
     <TextView
         android:id="@+id/titreConfirm"
-        android:layout_width="134dp"
-        android:layout_height="17dp"
+        android:layout_width="295dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="28dp"
         android:layout_toEndOf="@+id/imageContact"
