--- a/app/src/main/res/layout/activity_list_advert.xml
+++ b/app/src/main/res/layout/activity_list_advert.xml
@@ -8,8 +8,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
-        android:layout_width="309dp"
-        android:layout_height="357dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"></android.support.v7.widget.RecyclerView>
 
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/recycler"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="105dp"
+        android:layout_marginStart="158dp"
         android:text="Prix$" />
 
     <TextView
@@ -37,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/recycler"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="124dp"
         android:text="Date" />
 
 </RelativeLayout>
